--- a/openstack/monasca-log-api/monasca-log-api.spec.j2
+++ b/openstack/monasca-log-api/monasca-log-api.spec.j2
@@ -3,7 +3,6 @@
 {% set rpm_release = '1' %}
 
 %define sname           {{ pypi_name }}
-
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
@@ -11,28 +10,28 @@ Summary:        OpenStack Monasca Log Api plugin
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-
 Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
 Source1:        %{name}.conf
 Source3:        %{name}-wsgi.conf
-
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('falcon') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
-BuildRequires:  {{ py2pkg('mock') }}
-BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('keystonemiddleware') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('monasca-common') }}
+BuildRequires:  {{ py2pkg('monasca-statsd') }}
+BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.context') }}
-BuildRequires:  {{ py2pkg('oslo.middleware') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
+BuildRequires:  {{ py2pkg('oslo.middleware') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('os-testr') }}
-BuildRequires:  {{ py2pkg('monasca-common') }}
-BuildRequires:  {{ py2pkg('monasca-statsd') }}
+BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('simplejson') }}
-BuildRequires:  {{ py2pkg('falcon') }}
+Requires:       python-%{sname} = %{version}
+BuildArch:      noarch
 %if 0%{?suse_version}
 BuildRequires:  apache2-mod_wsgi
 Requires:       apache2-mod_wsgi
@@ -40,9 +39,6 @@ Requires:       apache2-mod_wsgi
 BuildRequires:  mod_wsgi
 Requires:       mod_wsgi
 %endif
-Requires:       python-%{sname} = %{version}
-
-BuildArch:      noarch
 
 %description
 monasca-log-api is a RESTful API server receiving logs from the deployed
@@ -51,20 +47,18 @@ log agents.
 %package -n python-%{sname}
 Summary:        OpenStack Monasca Log Api plugin
 Group:          Development/Languages/Python
-
-Requires:       {{ py2pkg('pbr') }}
-Requires:       {{ py2pkg('keystonemiddleware') }}
-Requires:       {{ py2pkg('oslo.config') }}
-Requires:       {{ py2pkg('oslo.context') }}
-Requires:       {{ py2pkg('oslo.middleware') }}
-Requires:       {{ py2pkg('oslo.log') }}
-Requires:       {{ py2pkg('oslo.serialization') }}
-Requires:       {{ py2pkg('oslo.utils') }}
-Requires:       {{ py2pkg('monasca-common') }}
-Requires:       {{ py2pkg('monasca-statsd') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('falcon') }}
-
+Requires:       {{ py2pkg('keystonemiddleware') }}
+Requires:       {{ py2pkg('monasca-common') }}
+Requires:       {{ py2pkg('monasca-statsd') }}
+Requires:       {{ py2pkg('oslo.config') }}
+Requires:       {{ py2pkg('oslo.context') }}
+Requires:       {{ py2pkg('oslo.log') }}
+Requires:       {{ py2pkg('oslo.middleware') }}
+Requires:       {{ py2pkg('oslo.serialization') }}
+Requires:       {{ py2pkg('oslo.utils') }}
+Requires:       {{ py2pkg('pbr') }}
 BuildArch:      noarch
 
 %description -n python-%{sname}
@@ -82,10 +76,10 @@ log agents.
 %py2_install
 
 ## directories
-%{__install} -d -m 750 %{buildroot}%{_sysconfdir}/monasca
-%{__install} -d -m 750 %{buildroot}%{_var}/log/monasca
-%{__install} -d -m 755 %{buildroot}%{_var}/lib/monasca-log-api
-%{__install} -d -m 755 %{buildroot}%{apache_site_dir}
+install -d -m 750 %{buildroot}%{_sysconfdir}/monasca
+install -d -m 750 %{buildroot}%{_var}/log/monasca
+install -d -m 755 %{buildroot}%{_var}/lib/monasca-log-api
+install -d -m 755 %{buildroot}%{apache_site_dir}
 
 ## configuration directory
 find %{buildroot}%{_prefix}%{_sysconfdir}/ -type f -name 'log-api-*' -print0 | xargs -0 mv -t %{buildroot}%{_sysconfdir}/monasca/
@@ -94,15 +88,15 @@ rm -rf %{buildroot}%{_prefix}%{_sysconfdir}/monasca
 # configuration bits
 # NOTEtrebskit) file names are hardcoded in monasca-log-api
 # should be refactored when Bug#1670277 is resolved
-%{__install} -D -m 640 %{SOURCE1} %{buildroot}%{_sysconfdir}/monasca/log-api-config.conf
-%{__install} -D -m 640 etc/monasca/log-api-config.ini %{buildroot}%{_sysconfdir}/monasca/log-api-config.ini
-%{__install} -D -m 640 etc/monasca/log-api-logging.conf %{buildroot}%{_sysconfdir}/monasca/log-api-logging.conf
+install -D -m 640 %{SOURCE1} %{buildroot}%{_sysconfdir}/monasca/log-api-config.conf
+install -D -m 640 etc/monasca/log-api-config.ini %{buildroot}%{_sysconfdir}/monasca/log-api-config.ini
+install -D -m 640 etc/monasca/log-api-logging.conf %{buildroot}%{_sysconfdir}/monasca/log-api-logging.conf
 
 # WSGI application
-%{__install} -D -m 755 monasca_log_api/wsgi/monasca_log_api.py %{buildroot}%{_bindir}/monasca-log-api.wsgi
+install -D -m 755 monasca_log_api/wsgi/monasca_log_api.py %{buildroot}%{_bindir}/monasca-log-api.wsgi
 
 ## install apache configuration
-%{__install} -p -D -m 640 %{SOURCE3} %{buildroot}%{apache_site_dir}/%{sname}.conf.sample
+install -p -D -m 640 %{SOURCE3} %{buildroot}%{apache_site_dir}/%{sname}.conf.sample
 sed -e "
     s|__APACHE_NAME__|%{apache_name}|g;
 " -i %{buildroot}%{apache_site_dir}/%{sname}.conf.sample
