--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -15,10 +15,8 @@
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
-
 %define username            monasca-agent
 %define groupname           monasca
-
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
@@ -30,17 +28,6 @@ Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.t
 Source1:        %{name}-sudoers
 Source2:        %{name}.service
 BuildRequires:  openstack-macros
-
-%if 0%{?suse_version}
-BuildRequires:  systemd-rpm-macros
-%{?systemd_requires}
-%else
-BuildRequires:  systemd
-Requires(post): systemd
-Requires(preun):    systemd
-Requires(postun):   systemd
-%endif
-
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('gevent') }}
@@ -62,11 +49,20 @@ BuildRequires:  {{ py2pkg('python-memcached') }}
 BuildRequires:  {{ py2pkg('redis') }}
 BuildRequires:  {{ py2pkg('requests') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
-BuildRequires:  sudo
 BuildRequires:  {{ py2pkg('supervisor') }}
 BuildRequires:  {{ py2pkg('tornado') }}
+BuildRequires:  sudo
 Requires:       python-%{sname} = %{version}-%{release}
 BuildArch:      noarch
+%if 0%{?suse_version}
+BuildRequires:  systemd-rpm-macros
+%{?systemd_requires}
+%else
+BuildRequires:  systemd
+Requires(post): systemd
+Requires(postun):   systemd
+Requires(preun):    systemd
+%endif
 
 %description
 The Monasca Agent is a modern Python monitoring agent for gathering metrics and
@@ -113,21 +109,21 @@ This package contains monasca-agent Python module.
 %py2_install
 
 # /etc
-%{__install} -d -m 750 %{buildroot}%{_sysconfdir}/monasca/agent/conf.d
+install -d -m 750 %{buildroot}%{_sysconfdir}/monasca/agent/conf.d
 
 # /usr/lib
-%{__install} -d -m 750 %{buildroot}%{_exec_prefix}/lib/monasca/agent/custom_checks.d
-%{__install} -d -m 750 %{buildroot}%{_exec_prefix}/lib/monasca/agent/custom_detect.d
+install -d -m 750 %{buildroot}%{_prefix}/lib/monasca/agent/custom_checks.d
+install -d -m 750 %{buildroot}%{_prefix}/lib/monasca/agent/custom_detect.d
 
 # /var
-%{__install} -d -m 750  %{buildroot}%{_localstatedir}/log/%{sname}
-%{__install} -d -m 700  %{buildroot}%{_localstatedir}/run/%{sname}
+install -d -m 750  %{buildroot}%{_localstatedir}/log/%{sname}
+install -d -m 700  %{buildroot}%{_localstatedir}/run/%{sname}
 
 # sudoers configuration
-%{__install} -D -m 440 %{SOURCE1} %{buildroot}%{_sysconfdir}/sudoers.d/%{name}
+install -D -m 440 %{SOURCE1} %{buildroot}%{_sysconfdir}/sudoers.d/%{name}
 
 # systemd unit file
-%{__install} -D -m 644 %{SOURCE2} %{buildroot}%{_unitdir}/%{name}.service
+install -D -m 644 %{SOURCE2} %{buildroot}%{_unitdir}/%{name}.service
 
 %pre
 # create user and groups
@@ -142,8 +138,8 @@ PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 %dir %{_sysconfdir}/monasca
 %config %{_sysconfdir}/monasca/agent
 %config %{_sysconfdir}/sudoers.d/%{name}
-%dir %{_exec_prefix}/lib/monasca
-%{_exec_prefix}/lib/monasca/agent
+%dir %{_prefix}/lib/monasca
+%{_prefix}/lib/monasca/agent
 %dir %{_localstatedir}/log/%{sname}
 %{_unitdir}/%{name}.service
 
