openstackclient patch to fix reversed block/shared migration options
Provide a patch to fix the wrongly reversed options
--shared/block-migration in the openstackclient
server migrate command

Change-Id: I50087802e05ddb7a0dbd9561b70a8f6d5d13b9b1

--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+# patch from https://review.openstack.org/#/c/385138/
+Patch0:         0001-Fix-shared-block-migration-options.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('cliff') }}
@@ -74,7 +76,7 @@ actual REST API client actions.
 This package contains auto-generated documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 
 %build
 %{py2_build}
