--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -1,6 +1,6 @@
 %global with_doc 1
 %global sname keystone
-{% set upstream_version = '11.0.0' %}
+{% set upstream_version = '12.0.0.0b1' %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
@@ -18,8 +18,6 @@ Source2:        openstack-keystone.sysctl
 Source3:        openstack-keystone.tmpfiles
 Source4:        openstack-keystone.defaultconf
 Source5:        openstack-keystone.README.config
-# https://review.openstack.org/#/c/422234/
-Patch1:         0001-Small-fixes-for-WebOb-1.7-compatibiltity.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Tempest') }}
 BuildRequires:  {{ py2pkg('WebTest') }}
@@ -166,6 +164,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 # config file generation
 oslo-config-generator --config-file config-generator/keystone.conf \
 --output-file etc/keystone.conf.sample
+# policy file generation
+oslopolicy-sample-generator --config-file etc/keystone-policy-generator.conf --output-file etc/keystone.policy.yaml
 
 %install
 %{py2_install}
@@ -183,7 +183,7 @@ install -D -m 640 %{SOURCE4} %{buildroot}/%{_sysconfdir}/keystone/keystone.conf.
 install -D -m 440 %{SOURCE5} %{buildroot}/%{_sysconfdir}/keystone/README.config
 install -p -D -m 640 etc/logging.conf.sample %{buildroot}%{_sysconfdir}/keystone/logging.conf
 install -p -D -m 640 etc/keystone-paste.ini %{buildroot}%{_sysconfdir}/keystone/keystone-paste.ini
-install -p -D -m 640 etc/policy.json %{buildroot}%{_sysconfdir}/keystone/policy.json
+install -p -D -m 640 etc/keystone.policy.yaml %{buildroot}%{_sysconfdir}/keystone/keystone.policy.yaml
 install -p -D -m 640 etc/default_catalog.templates %{buildroot}%{_sysconfdir}/keystone/default_catalog.templates
 install -p -D -m 640 etc/sso_callback_template.html %{buildroot}%{_sysconfdir}/keystone/sso_callback_template.html
 install -p -D -m 644 %{SOURCE1} %{buildroot}%{_sysconfdir}/logrotate.d/openstack-keystone
@@ -231,7 +231,7 @@ rm keystone/tests/unit/test_hacking_checks.py
 %config(noreplace) %attr(0640, root, keystone) %{_sysconfdir}/keystone/keystone-paste.ini
 %config(noreplace) %attr(0640, root, keystone) %{_sysconfdir}/keystone/logging.conf
 %config(noreplace) %attr(0640, root, keystone) %{_sysconfdir}/keystone/default_catalog.templates
-%config(noreplace) %attr(0640, keystone, keystone) %{_sysconfdir}/keystone/policy.json
+%config(noreplace) %attr(0640, keystone, keystone) %{_sysconfdir}/keystone/keystone.policy.yaml
 %config(noreplace) %attr(0640, keystone, keystone) %{_sysconfdir}/keystone/sso_callback_template.html
 %config(noreplace) %{_sysconfdir}/logrotate.d/openstack-keystone
 %dir %attr(0755, %{keystone}, %{keystone}) %{_localstatedir}/lib/keystone
