Use 'basename' filter for source
When tracking stable branches, use the basename filter to set the RPM
Source tag to a local file instead of an url.
This is useful on the SUSE side because the OpenBuildService tries to
download the tarball again but this tarball could have changed meanwhile.

Depends-On: I00c8c823af35340de0aff479a4f05e1d077613ee
Change-Id: I827b2b1f80866855c336a464d78ddfbaaeb0133b

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -27,7 +27,7 @@ Summary:        OpenStack Monasca metrics agent
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        {{ source }}
+Source0:        {{ source|basename }}
 Source1:        %{name}-sudoers
 Source2:        %{name}.service
 BuildRequires:  openstack-macros
