--- a/openstack/monasca-statsd/monasca-statsd.spec.j2
+++ b/openstack/monasca-statsd/monasca-statsd.spec.j2
@@ -11,7 +11,7 @@ Summary:        Python Statsd library for sending statsd messages via the Monasc
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        {{ source }}
+Source0:        {{ source|basename }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('nose') }}
