--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -19,7 +19,7 @@ Summary:        OpenStack Monasca Horizon plugin
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        {{ source }}
+Source0:        {{ source|basename }}
 BuildRequires:  openstack-macros
 BuildRequires:  fdupes
 BuildRequires:  {{ py2pkg('horizon') }}
