monasca-agent: Fix log dir permissions
Change-Id: I5371d0120659db1a54cf36b5588371464e491229

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -159,7 +159,7 @@ PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 %config %{_sysconfdir}/sudoers.d/%{name}
 %dir %{_prefix}/lib/monasca
 %{_prefix}/lib/monasca/agent
-%dir %{_localstatedir}/log/%{sname}
+%dir %attr(0750, %{username}, %{groupname}) %{_localstatedir}/log/%{sname}
 %{_unitdir}/%{name}.service
 %if 0%{?suse_version}
 %{_sbindir}/rc%{name}
