--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -168,7 +168,7 @@ PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 %config %{_sysconfdir}/sudoers.d/%{name}
 %dir %{_exec_prefix}/lib/monasca
 %{_exec_prefix}/lib/monasca/agent
-%dir %{_localstatedir}/log/%{sname}
+%dir %attr(0750, %{username}, %{groupname}) %{_localstatedir}/log/%{sname}
 %{_unitdir}/%{name}.service
 %if 0%{?suse_version}
 %{_sbindir}/rc%{name}
