--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'horizon' %}
-{% set upstream_version = '11.0.0' %}
+{% set source = fetch_source('http://tarballs.openstack.org/horizon/horizon-stable-ocata.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %define component {{ pypi_name }}
@@ -19,7 +20,7 @@ Summary:        OpenStack Dashboard (Horizon)
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://wiki.openstack.org/OpenStackDashboard
-Source0:        http://tarballs.openstack.org/%{component}/%{component}-{{upstream_version}}.tar.gz
+Source0:        {{ source|basename }}
 # Apache2 example configuration:
 %if 0%{?rdo}
 Source2:        openstack-dashboard.conf.sample.rdo
