monasca-agent: Remove packaging/ subdir
Change-Id: I448763bf6a19101d73ff1f673a669407a34e6e97

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -102,6 +102,8 @@ This package contains monasca-agent Python module.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+# contains various binary files etc that we don't need
+rm -rf packaging/monasca-agent{,-deb}
 
 %build
 %py2_build
