Update tripleo-common to 7.0.0
A new subpackage is created: python-tripleo-devtools, containing
tools for developers and CI that are tipically not needed elsewhere.

Change-Id: Ibe23aa7801361b24c96439c0bd1949e65d2c369e
Depends-on: I42a8fc1c8a2af89d493546f3a21cb909cf12ec30
Depends-on: I63c83273d59c230ddad9e02d8ed1446a8620dec2

--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -1,7 +1,7 @@
 %global sname tripleo-common
-%global sversion 6.0.0
+%global sversion 7.0.0
 Name:           {{ py2name('tripleo-common') }}
-Version:        6.0.0
+Version:        7.0.0
 Release:        0
 Summary:        Python library for code used by TripleO projects
 License:        {{ license('Apache-2.0') }}
@@ -10,9 +10,11 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/t/%{sname}/%{sname}-%{sversion}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('mistral') }}
+BuildRequires:  {{ py2pkg('GitPython') }}
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('docker-py') }}
+BuildRequires:  {{ py2pkg('gitdb') }}
 BuildRequires:  {{ py2pkg('python-heatclient') }}
 BuildRequires:  {{ py2pkg('python-ironicclient') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
@@ -24,8 +26,10 @@ BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('mistral') }}
 Requires:       {{ py2pkg('Babel') }}
+Requires:       {{ py2pkg('GitPython') }}
 Requires:       {{ py2pkg('Jinja2') }}
 Requires:       {{ py2pkg('docker-py') }}
+Requires:       {{ py2pkg('gitdb') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-heatclient') }}
 Requires:       {{ py2pkg('python-ironic-inspector-client') }}
@@ -50,6 +54,14 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 %description      doc
 Python library for code used by TripleO projects.
 This package contains auto-generated documentation.
+
+%package devtools
+Summary: A collection of tools for TripleO developers and CI
+Requires: %{name} = %{version}-%{release}
+
+%description devtools
+This package installs the TripleO tools for developers and CI that typically
+don't fit in a product.
 
 %prep
 %autosetup -n %{sname}-%{sversion}
@@ -86,6 +98,9 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %files doc
 %license LICENSE
 %doc doc/build/html
+
+%files devtools
+%{_bindir}/pull-puppet-modules
 
 %changelog
 
