Update keystoneauth1 to 2.20.0
Also disable intersphinx. There is no network during build.

Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>
Change-Id: I45ff9a7f53a0c85c5ea86c4704a2e28e205ad620
Depends-on: I2b6d6aaeca7f79197117dd34513426365ad0e479

--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 Name:           {{ py2name('keystoneauth1') }}
-Version:        2.19.0
+Version:        2.20.0
 Release:        0
 Summary:        OpenStack authenticating tools
 License:        {{ license('Apache-2.0') }}
@@ -57,6 +57,9 @@ Documentation for OpenStack authenticating tools.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+
+# cleanup intersphinx (we have no network during build)
+echo "intersphinx_mapping = {}" >> doc/source/conf.py
 
 %build
 %{py2_build}
